refactor(architecture): modularizacao do ConfirmBlipWebhookActionHandler e decomposicao de componentes no front