@@ -1,30 +1,41 @@
 package br.dev.ctrls.inovareti.modules.notification.infrastructure.adapter.output.discord;
 
-import java.util.List;
+import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.EnumSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.TimeUnit;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import br.dev.ctrls.inovareti.modules.ticket.domain.model.Ticket;
 import br.dev.ctrls.inovareti.modules.ticket.domain.port.output.DiscordTicketPort;
 import br.dev.ctrls.inovareti.modules.ticket.domain.port.output.TicketRepositoryPort;
-import org.springframework.transaction.annotation.Transactional;
+import br.dev.ctrls.inovareti.modules.user.domain.model.User;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.Member;
+import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.PermissionOverride;
 import net.dv8tion.jda.api.entities.channel.concrete.Category;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
+import net.dv8tion.jda.api.interactions.components.ItemComponent;
 
 /**
  * Adaptador que implementa DiscordTicketPort utilizando a biblioteca JDA para
- * integração com o Discord.
+ * integração com o Discord. Delega a construção visual de embeds e tópicos para DiscordTicketEmbedBuilder.
  */
 @Slf4j
 @Component
@@ -33,16 +44,15 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
 
     private final ObjectProvider<JDA> jdaProvider;
     private final TicketRepositoryPort ticketRepository;
+    private final DiscordTicketEmbedBuilder embedBuilder;
 
     @Value("${discord.bot.guild-id:}")
     private String discordGuildId;
 
     private static final String ACTIVE_CATEGORY_ID = "1526959210863001751";
     private static final String ARCHIVED_CATEGORY_ID = "1526959741585063957";
-    private static final int CLINIC_BRAND_COLOR = 0xF97316; // Cor Laranja de Destaque Inovare TI (#F97316)
 
-    private final java.util.Set<java.util.UUID> processingResolution = java.util.Collections
-            .newSetFromMap(new java.util.concurrent.ConcurrentHashMap<>());
+    private final Set<UUID> processingResolution = Collections.newSetFromMap(new ConcurrentHashMap<>());
 
     @Override
     @Transactional(readOnly = true)
@@ -53,15 +63,13 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
 
         JDA jda = jdaProvider.getIfAvailable();
         if (jda == null) {
-            log.warn("[DISCORD-TICKET] JDA indisponível. Criação do canal para chamado #{} ignorada.",
-                    ticket.getNumber());
+            log.warn("[DISCORD-TICKET] JDA indisponível. Criação do canal para chamado #{} ignorada.", ticket.getNumber());
             return;
         }
 
         Guild guild = resolveGuild(jda);
         if (guild == null) {
-            log.warn("[DISCORD-TICKET] Guilda não encontrada. Criação do canal para chamado #{} abortada.",
-                    ticket.getNumber());
+            log.warn("[DISCORD-TICKET] Guilda não encontrada. Criação do canal para chamado #{} abortada.", ticket.getNumber());
             return;
         }
 
@@ -71,26 +79,20 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
             return;
         }
 
-        // Pre-resolve dados na thread síncrona com transação ativa para evitar
-        // LazyInitializationException no worker do Discord
-        final String preResolvedRequesterName = safeGetRequesterName(ticket);
-        final String preResolvedSectorName = safeGetSectorName(ticket);
-        final String preResolvedCategoryName = safeGetCategoryName(ticket);
-        final String preResolvedRelatedTicketsSummary = safeGetRelatedTicketsSummary(ticket);
+        // Pre-resolve dados na thread síncrona com transação ativa para evitar LazyInitializationException
+        final String preResolvedRequesterName = embedBuilder.safeGetRequesterName(ticket);
+        final String preResolvedSectorName = embedBuilder.safeGetSectorName(ticket);
+        final String preResolvedCategoryName = embedBuilder.safeGetCategoryName(ticket);
+        final String preResolvedRelatedTicketsSummary = embedBuilder.safeGetRelatedTicketsSummary(ticket);
 
         // Resolve membros a serem permitidos no canal
         Member requesterMember = null;
-        br.dev.ctrls.inovareti.modules.user.domain.model.User requester = ticket.getRequester();
-        if (requester != null) {
-            String requesterDiscordId = requester.getDiscordUserId();
-            if (requesterDiscordId != null && !requesterDiscordId.isBlank()) {
-                try {
-                    requesterMember = guild
-                            .retrieveMemberById(java.util.Objects.requireNonNull(requesterDiscordId.trim())).complete();
-                } catch (Exception ex) {
-                    log.warn("[DISCORD-TICKET] Não foi possível carregar criador do chamado no Discord: {}",
-                            requesterDiscordId, ex);
-                }
+        User requester = ticket.getRequester();
+        if (requester != null && requester.getDiscordUserId() != null && !requester.getDiscordUserId().isBlank()) {
+            try {
+                requesterMember = guild.retrieveMemberById(Objects.requireNonNull(requester.getDiscordUserId().trim())).complete();
+            } catch (Exception ex) {
+                log.warn("[DISCORD-TICKET] Não foi possível carregar criador do chamado no Discord: {}", requester.getDiscordUserId(), ex);
             }
         }
 
@@ -98,65 +100,30 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
         for (String discordId : discordUserIds) {
             if (discordId != null && !discordId.isBlank()) {
                 try {
-                    Member m = guild.retrieveMemberById(java.util.Objects.requireNonNull(discordId.trim())).complete();
+                    Member m = guild.retrieveMemberById(Objects.requireNonNull(discordId.trim())).complete();
                     if (m != null) {
                         allowedMembers.add(m);
                     }
                 } catch (Exception ex) {
-                    log.warn("[DISCORD-TICKET] Não foi possível carregar membro designado no Discord: {}", discordId,
-                            ex);
+                    log.warn("[DISCORD-TICKET] Não foi possível carregar membro designado no Discord: {}", discordId, ex);
                 }
             }
         }
 
-        String shortNum = ticket.getNumber() != null ? ticket.getNumber().toLowerCase() : "ticket";
-        String normalizedTitle = "chamado";
-        if (ticket.getTitle() != null && !ticket.getTitle().isBlank()) {
-            normalizedTitle = java.text.Normalizer.normalize(ticket.getTitle(), java.text.Normalizer.Form.NFD)
-                    .replaceAll("\\p{M}", "")
-                    .toLowerCase()
-                    .replaceAll("[^a-z0-9\\s-]", "")
-                    .replaceAll("\\s+", "-")
-                    .replaceAll("-+", "-")
-                    .trim();
-        }
-        if (normalizedTitle.isEmpty()) {
-            normalizedTitle = "chamado";
-        }
-        if (normalizedTitle.length() > 65) {
-            normalizedTitle = normalizedTitle.substring(0, 65).replaceAll("-$", "");
-        }
+        String channelName = embedBuilder.formatChannelName(ticket);
+        String channelTopic = embedBuilder.formatChannelTopic(ticket, preResolvedRequesterName, preResolvedSectorName);
 
-        String channelName = normalizedTitle + "-" + shortNum;
-        if (channelName.length() > 85) {
-            channelName = channelName.substring(0, 85).replaceAll("-$", "");
-        }
-
-        String requesterDisplayName = preResolvedRequesterName != null ? preResolvedRequesterName
-                : (ticket.getRequester() != null ? ticket.getRequester().getName() : "Solicitante");
-        String sectorDisplayName = preResolvedSectorName != null ? preResolvedSectorName
-                : (ticket.getRequester() != null && ticket.getRequester().getSector() != null
-                        ? ticket.getRequester().getSector().getName()
-                        : "Geral");
-        String ticketTitleDisplay = ticket.getTitle() != null ? ticket.getTitle() : "Sem título";
-        String channelTopic = String.format("🎫 Chamado #%s | %s (%s) | %s | ID: %s",
-                shortNum.toUpperCase(), requesterDisplayName, sectorDisplayName, ticketTitleDisplay, ticket.getId());
-        if (channelTopic.length() > 1024) {
-            channelTopic = channelTopic.substring(0, 1020) + "...";
-        }
-
-        // Configura ações de override de permissão
-        var channelAction = activeCategory.createTextChannel(java.util.Objects.requireNonNull(channelName))
+        var channelAction = activeCategory.createTextChannel(Objects.requireNonNull(channelName))
                 .setTopic(channelTopic)
                 .addPermissionOverride(guild.getPublicRole(), null, EnumSet.of(Permission.VIEW_CHANNEL));
 
         if (requesterMember != null) {
-            channelAction = channelAction.addPermissionOverride(java.util.Objects.requireNonNull(requesterMember),
+            channelAction = channelAction.addPermissionOverride(Objects.requireNonNull(requesterMember),
                     EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND, Permission.MESSAGE_HISTORY), null);
         }
 
         for (Member member : allowedMembers) {
-            channelAction = channelAction.addPermissionOverride(java.util.Objects.requireNonNull(member),
+            channelAction = channelAction.addPermissionOverride(Objects.requireNonNull(member),
                     EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND, Permission.MESSAGE_HISTORY), null);
         }
 
@@ -167,11 +134,9 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
                     sendAndPinInitialTicketMessage(channel, ticket, preResolvedRequesterName, preResolvedSectorName,
                             preResolvedCategoryName, preResolvedRelatedTicketsSummary);
                 },
-                error -> log.error("[DISCORD-TICKET] Falha ao criar canal privado para chamado #{}", ticket.getNumber(),
-                        error));
+                error -> log.error("[DISCORD-TICKET] Falha ao criar canal privado para chamado #{}", ticket.getNumber(), error));
     }
 
-    @SuppressWarnings("null")
     private void sendAndPinInitialTicketMessage(
             TextChannel channel,
             Ticket ticket,
@@ -180,88 +145,32 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
             String preResolvedCategoryName,
             String preResolvedRelatedTicketsSummary) {
         try {
-            net.dv8tion.jda.api.EmbedBuilder eb = new net.dv8tion.jda.api.EmbedBuilder();
-            String ticketNum = ticket.getNumber() != null ? ticket.getNumber() : "-";
-            String ticketTitle = ticket.getTitle() != null ? ticket.getTitle() : "Sem título";
-            eb.setTitle("🎫 Chamado #" + ticketNum + " - " + DiscordLgpdSanitizer.sanitize(ticketTitle));
-            eb.setColor(CLINIC_BRAND_COLOR);
+            MessageEmbed embed = embedBuilder.buildInitialTicketEmbed(
+                    ticket, preResolvedRequesterName, preResolvedSectorName, preResolvedCategoryName, preResolvedRelatedTicketsSummary);
+            ItemComponent[] actionButtons = embedBuilder.buildInitialActionButtons(ticket);
 
-            String rawDescription = ticket.getDescription();
-            if (rawDescription == null || rawDescription.isBlank()) {
-                rawDescription = ticket.getTitle();
-            }
-            String sanitizedDescription = DiscordLgpdSanitizer.sanitize(rawDescription);
-            eb.setDescription(
-                    "**Descrição do Problema:**\n" + (sanitizedDescription != null ? sanitizedDescription : "-"));
-
-            String requesterName = preResolvedRequesterName != null ? preResolvedRequesterName
-                    : safeGetRequesterName(ticket);
-            String requesterSector = preResolvedSectorName != null ? preResolvedSectorName : safeGetSectorName(ticket);
-            String categoryName = preResolvedCategoryName != null ? preResolvedCategoryName
-                    : safeGetCategoryName(ticket);
-            String priority = ticket.getPriority() != null ? ticket.getPriority().toString() : "-";
-            String status = ticket.getStatus() != null ? ticket.getStatus().toString() : "OPEN";
-
-            eb.addField("Solicitante", requesterName, true);
-            eb.addField("Setor", requesterSector, true);
-            eb.addField("Categoria", categoryName, true);
-            eb.addField("Prioridade", priority, true);
-            eb.addField("Status", status, true);
-
-            if (ticket.getSlaDeadline() != null) {
-                String formattedSla = java.util.Objects.requireNonNullElse(
-                        ticket.getSlaDeadline()
-                                .format(java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm")),
-                        "-");
-                eb.addField("Prazo SLA", formattedSla, true);
-            }
-
-            String relatedSummary = preResolvedRelatedTicketsSummary != null ? preResolvedRelatedTicketsSummary
-                    : safeGetRelatedTicketsSummary(ticket);
-            if (relatedSummary != null && !relatedSummary.isBlank()) {
-                eb.addField("🔗 Chamados Vinculados", relatedSummary, false);
-            }
-
-            String openedAt = ticket.getCreatedAt() != null
-                    ? ticket.getCreatedAt().format(java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm"))
-                    : "-";
-            eb.setFooter("Inovare TI • Chamado aberto em: " + openedAt);
-            eb.setTimestamp(java.time.Instant.now());
-
-            net.dv8tion.jda.api.interactions.components.buttons.Button btnAssumir = net.dv8tion.jda.api.interactions.components.buttons.Button
-                    .primary("ticket:assumir:" + ticket.getId(), "👤 Assumir Chamado");
-            net.dv8tion.jda.api.interactions.components.buttons.Button btnResolver = net.dv8tion.jda.api.interactions.components.buttons.Button
-                    .success("ticket:resolver:" + ticket.getId(), "✅ Resolver Chamado");
-
-            channel.sendMessageEmbeds(eb.build())
-                    .setActionRow(btnAssumir, btnResolver)
+            channel.sendMessageEmbeds(embed)
+                    .setActionRow(actionButtons)
                     .queue(
                             message -> message.pin().queue(
-                                    v -> log.info("[DISCORD-TICKET] Mensagem inicial de detalhes fixada no canal #{}",
-                                            channel.getName()),
-                                    pinErr -> log.warn(
-                                            "[DISCORD-TICKET] Falha ao fixar mensagem inicial no canal #{}: {}",
-                                            channel.getName(), pinErr.getMessage())),
-                            sendErr -> log.error("[DISCORD-TICKET] Falha ao enviar embed inicial para o canal #{}: {}",
-                                    channel.getName(), sendErr.getMessage()));
+                                    v -> log.info("[DISCORD-TICKET] Mensagem inicial de detalhes fixada no canal #{}", channel.getName()),
+                                    pinErr -> log.warn("[DISCORD-TICKET] Falha ao fixar mensagem inicial no canal #{}: {}", channel.getName(), pinErr.getMessage())),
+                            sendErr -> log.error("[DISCORD-TICKET] Falha ao enviar embed inicial para o canal #{}: {}", channel.getName(), sendErr.getMessage()));
         } catch (Exception ex) {
-            log.error("[DISCORD-TICKET] Erro ao montar ou enviar mensagem inicial fixada no canal #{}",
-                    channel.getName(), ex);
+            log.error("[DISCORD-TICKET] Erro ao montar ou enviar mensagem inicial fixada no canal #{}", channel.getName(), ex);
         }
     }
 
     @Override
     @Transactional(readOnly = true)
-    @SuppressWarnings("null")
     public void archiveTicketChannel(Ticket ticketParam) {
         if (ticketParam == null || ticketParam.getId() == null) {
             return;
         }
 
-        java.util.UUID ticketId = ticketParam.getId();
+        UUID ticketId = ticketParam.getId();
         if (!processingResolution.add(ticketId)) {
-            log.info(
-                    "[DISCORD-TICKET] Arquivamento do chamado #{} (ID: {}) já está em andamento ou foi concluído. Ignorando execução duplicada.",
+            log.info("[DISCORD-TICKET] Arquivamento do chamado #{} (ID: {}) já está em andamento ou foi concluído. Ignorando duplicidade.",
                     ticketParam.getNumber(), ticketId);
             return;
         }
@@ -270,171 +179,88 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
             Ticket dbTicket = ticketRepository.findByIdWithRelations(ticketParam.getId()).orElse(ticketParam);
             log.info("[DISCORD-TICKET] Iniciando arquivamento de canal para chamado #{}.", dbTicket.getNumber());
 
-            JDA jda = jdaProvider.getIfAvailable();
-            if (jda == null) {
-                log.warn("[DISCORD-TICKET] JDA indisponível. Arquivamento do canal para chamado #{} ignorado.",
-                        dbTicket.getNumber());
+            JDA jDA = jdaProvider.getIfAvailable();
+            if (jDA == null) {
+                log.warn("[DISCORD-TICKET] JDA indisponível. Arquivamento do canal para chamado #{} ignorado.", dbTicket.getNumber());
                 return;
             }
 
-            Guild guild = resolveGuild(jda);
+            Guild guild = resolveGuild(jDA);
             if (guild == null) {
-                log.warn("[DISCORD-TICKET] Guilda não encontrada. Arquivamento do canal para chamado #{} abortado.",
-                        dbTicket.getNumber());
+                log.warn("[DISCORD-TICKET] Guilda não encontrada. Arquivamento do canal para chamado #{} abortado.", dbTicket.getNumber());
                 return;
             }
 
             Category baseArchivedCategory = guild.getCategoryById(ARCHIVED_CATEGORY_ID);
             Category targetArchivedCategory = resolveAvailableArchivedCategory(guild, baseArchivedCategory);
             if (targetArchivedCategory == null) {
-                log.warn("[DISCORD-TICKET] Nenhuma categoria de arquivados disponível para o chamado #{}.",
-                        dbTicket.getNumber());
+                log.warn("[DISCORD-TICKET] Nenhuma categoria de arquivados disponível para o chamado #{}.", dbTicket.getNumber());
                 return;
             }
 
             List<TextChannel> channels = findChannelsForTicket(guild, dbTicket);
-
             if (channels.isEmpty()) {
                 log.warn("[DISCORD-TICKET] Nenhum canal encontrado para o chamado #{}.", dbTicket.getNumber());
                 return;
             }
 
-            // Recupera o texto de solução preferencialmente da memória do evento
-            // (ticketParam) ou do banco (dbTicket)
-            String rawSolution = ticketParam.getSolutionText();
-            if (rawSolution == null || rawSolution.isBlank()) {
-                rawSolution = dbTicket.getSolutionText();
-            }
-            if (rawSolution == null || rawSolution.isBlank()) {
-                if (dbTicket.getAsset() != null) {
-                    rawSolution = "Ativo baixado: Patrimônio " + dbTicket.getAsset().getPatrimonyCode();
-                } else if (ticketParam.getAsset() != null) {
-                    rawSolution = "Ativo baixado: Patrimônio " + ticketParam.getAsset().getPatrimonyCode();
-                } else {
-                    rawSolution = "Chamado resolvido com sucesso.";
-                }
-            }
-
             for (TextChannel channel : channels) {
-                // Envia e fixa embed de solução do chamado com botão de reabertura
-                net.dv8tion.jda.api.EmbedBuilder eb = new net.dv8tion.jda.api.EmbedBuilder();
-                String ticketNum = dbTicket.getNumber() != null ? dbTicket.getNumber() : "-";
-                eb.setTitle("✅ Chamado #" + ticketNum + " - Solução do Chamado");
-                eb.setColor(CLINIC_BRAND_COLOR);
+                MessageEmbed solutionEmbed = embedBuilder.buildSolutionEmbed(dbTicket, ticketParam);
+                ItemComponent reopenButton = embedBuilder.buildReopenButton(dbTicket);
 
-                String sanitizedSolution = DiscordLgpdSanitizer.sanitize(rawSolution);
-                eb.setDescription("**Solução Registrada:**\n" + (sanitizedSolution != null ? sanitizedSolution : "-"));
-
-                br.dev.ctrls.inovareti.modules.user.domain.model.User assignedUser = dbTicket.getAssignedTo() != null
-                        ? dbTicket.getAssignedTo()
-                        : ticketParam.getAssignedTo();
-                String assignedName = java.util.Objects.requireNonNullElse(
-                        assignedUser != null ? DiscordLgpdSanitizer.sanitize(assignedUser.getName())
-                                : "Equipe Inovare TI",
-                        "Equipe Inovare TI");
-                eb.addField("Atendido por", java.util.Objects.requireNonNullElse(assignedName, "Equipe Inovare TI"),
-                        true);
-
-                var assetObj = dbTicket.getAsset() != null ? dbTicket.getAsset() : ticketParam.getAsset();
-                if (assetObj != null) {
-                    eb.addField("Ativo Baixado", "Patrimônio " + assetObj.getPatrimonyCode(), true);
-                }
-
-                java.time.LocalDateTime closedAt = dbTicket.getClosedAt() != null ? dbTicket.getClosedAt()
-                        : ticketParam.getClosedAt();
-                String closedAtStr = closedAt != null
-                        ? closedAt.format(java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm"))
-                        : java.time.LocalDateTime.now()
-                                .format(java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm"));
-                eb.setFooter("Inovare TI • Chamado resolvido em: " + closedAtStr);
-                eb.setTimestamp(java.time.Instant.now());
-
-                net.dv8tion.jda.api.interactions.components.buttons.Button btnReabrir = net.dv8tion.jda.api.interactions.components.buttons.Button
-                        .secondary("ticket:reabrir:" + dbTicket.getId(), "🔄 Reabrir Chamado");
-
-                channel.sendMessageEmbeds(eb.build())
-                        .setActionRow(btnReabrir)
+                channel.sendMessageEmbeds(solutionEmbed)
+                        .setActionRow(reopenButton)
                         .queue(
                                 message -> message.pin().queue(
-                                        v -> log.info(
-                                                "[DISCORD-TICKET] Embed de solução do chamado #{} enviado e fixado no canal #{}",
-                                                ticketNum, channel.getName()),
-                                        pinErr -> log.warn(
-                                                "[DISCORD-TICKET] Embed de solução enviado, mas falhou ao fixar no canal #{}: {}",
-                                                channel.getName(), pinErr.getMessage())),
-                                err -> log.error(
-                                        "[DISCORD-TICKET] Falha ao enviar embed de resolução para canal #{}: {}",
-                                        channel.getName(), err.getMessage()));
+                                        v -> log.info("[DISCORD-TICKET] Embed de solução do chamado #{} enviado e fixado no canal #{}", dbTicket.getNumber(), channel.getName()),
+                                        pinErr -> log.warn("[DISCORD-TICKET] Embed de solução enviado, mas falhou ao fixar no canal #{}: {}", channel.getName(), pinErr.getMessage())),
+                                err -> log.error("[DISCORD-TICKET] Falha ao enviar embed de resolução para canal #{}: {}", channel.getName(), err.getMessage()));
 
                 // Remove permissão de escrita de todos os membros humanos vinculados
                 for (PermissionOverride override : channel.getMemberPermissionOverrides()) {
                     long targetId = override.getIdLong();
-                    if (targetId != jda.getSelfUser().getIdLong()) {
+                    if (targetId != jDA.getSelfUser().getIdLong()) {
                         try {
                             channel.getManager().putMemberPermissionOverride(
                                     targetId,
                                     EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_HISTORY),
                                     EnumSet.of(Permission.MESSAGE_SEND)).queue();
                         } catch (Exception ex) {
-                            log.warn(
-                                    "[DISCORD-TICKET] Falha ao remover permissões de escrita para membro no canal #{}: {}",
-                                    channel.getName(), ex.getMessage());
+                            log.warn("[DISCORD-TICKET] Falha ao remover permissões de escrita para membro no canal #{}: {}", channel.getName(), ex.getMessage());
                         }
                     }
                 }
 
-                // Move para a categoria semanal de arquivados disponível com tratamento
-                // defensivo
+                // Move para a categoria semanal de arquivados disponível com fallback
                 try {
                     channel.getManager().setParent(targetArchivedCategory).queue(
-                            v -> log.info(
-                                    "[DISCORD-TICKET] Canal #{} movido com sucesso para a categoria de arquivados '{}' (ID: {}).",
-                                    channel.getName(), targetArchivedCategory.getName(),
-                                    targetArchivedCategory.getId()),
+                            v -> log.info("[DISCORD-TICKET] Canal #{} movido com sucesso para categoria '{}' (ID: {}).",
+                                    channel.getName(), targetArchivedCategory.getName(), targetArchivedCategory.getId()),
                             error -> {
-                                log.error("[DISCORD-TICKET] Falha ao mover canal #{} para arquivados: {}",
-                                        channel.getName(), error.getMessage());
+                                log.error("[DISCORD-TICKET] Falha ao mover canal #{} para arquivados: {}", channel.getName(), error.getMessage());
                                 if (error.getMessage() != null && error.getMessage().contains("50035")) {
-                                    log.warn(
-                                            "[DISCORD-TICKET] Erro 50035 (limite 50 canais). Tentando criar/obter nova categoria de arquivados secundária.");
+                                    log.warn("[DISCORD-TICKET] Limite de 50 canais atingido (50035). Criando/obtendo categoria secundária.");
                                     Category fallbackCategory = resolveAvailableArchivedCategory(guild, null);
-                                    if (fallbackCategory != null
-                                            && !fallbackCategory.getId().equals(targetArchivedCategory.getId())) {
+                                    if (fallbackCategory != null && !fallbackCategory.getId().equals(targetArchivedCategory.getId())) {
                                         channel.getManager().setParent(fallbackCategory).queue(
-                                                v -> log.info(
-                                                        "[DISCORD-TICKET] Canal #{} movido com sucesso para categoria alternativa '{}'",
-                                                        channel.getName(), fallbackCategory.getName()),
-                                                e -> log.error("[DISCORD-TICKET] Falha final ao mover canal #{}: {}",
-                                                        channel.getName(), e.getMessage()));
+                                                v -> log.info("[DISCORD-TICKET] Canal #{} movido para categoria alternativa '{}'", channel.getName(), fallbackCategory.getName()),
+                                                e -> log.error("[DISCORD-TICKET] Falha final ao mover canal #{}: {}", channel.getName(), e.getMessage()));
                                     }
                                 }
                             });
                 } catch (Exception ex) {
-                    log.error("[DISCORD-TICKET] Exceção ao agendar movimento do canal #{}: {}", channel.getName(),
-                            ex.getMessage());
+                    log.error("[DISCORD-TICKET] Exceção ao agendar movimento do canal #{}: {}", channel.getName(), ex.getMessage());
                 }
             }
         } finally {
-            // Remove a trava de idempotência após 30 segundos
-            java.util.concurrent.CompletableFuture.delayedExecutor(30, java.util.concurrent.TimeUnit.SECONDS)
+            CompletableFuture.delayedExecutor(30, TimeUnit.SECONDS)
                     .execute(() -> processingResolution.remove(ticketId));
         }
     }
 
-    private String getWeeklyArchivedCategoryName(java.time.LocalDate date) {
-        java.time.LocalDate sunday = date
-                .with(java.time.temporal.TemporalAdjusters.previousOrSame(java.time.DayOfWeek.SUNDAY));
-        java.time.LocalDate saturday = date
-                .with(java.time.temporal.TemporalAdjusters.nextOrSame(java.time.DayOfWeek.SATURDAY));
-
-        java.time.format.DateTimeFormatter fmt = java.time.format.DateTimeFormatter.ofPattern("dd/MM");
-        return "📁 ⁃ ARQUIVADOS (" + sunday.format(fmt) + " a " + saturday.format(fmt) + ")";
-    }
-
     private synchronized Category resolveAvailableArchivedCategory(Guild guild, Category baseCategory) {
-        String baseWeeklyName = getWeeklyArchivedCategoryName(java.time.LocalDate.now());
+        String baseWeeklyName = embedBuilder.getWeeklyArchivedCategoryName(LocalDate.now());
 
-        // 1. Procura se a categoria semanal já existe na guilda com menos de 50 canais
         List<Category> matchingCategories = guild.getCategories().stream()
                 .filter(cat -> cat.getName() != null && cat.getName().startsWith(baseWeeklyName))
                 .sorted((c1, c2) -> c1.getName().compareTo(c2.getName()))
@@ -442,37 +268,27 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
 
         for (Category cat : matchingCategories) {
             if (cat.getChannels().size() < 50) {
-                log.info(
-                        "[DISCORD-TICKET] Utilizando categoria semanal de arquivados existente '{}' (ID: {}, canais: {}/50)",
+                log.info("[DISCORD-TICKET] Utilizando categoria semanal existente '{}' (ID: {}, canais: {}/50)",
                         cat.getName(), cat.getId(), cat.getChannels().size());
                 return cat;
             }
         }
 
-        // 2. Se não existir ou todas estiverem com 50 canais, cria uma nova categoria
-        // semanal
-        String newCategoryName;
-        if (matchingCategories.isEmpty()) {
-            newCategoryName = baseWeeklyName;
-        } else {
-            int nextIndex = matchingCategories.size() + 1;
-            newCategoryName = baseWeeklyName + " - " + nextIndex;
-        }
+        String newCategoryName = matchingCategories.isEmpty()
+                ? baseWeeklyName
+                : baseWeeklyName + " - " + (matchingCategories.size() + 1);
 
         if (newCategoryName.length() > 32) {
             newCategoryName = newCategoryName.substring(0, 32).trim();
         }
-        log.info("[DISCORD-TICKET] Criando automaticamente nova categoria semanal de arquivados: '{}'",
-                newCategoryName);
+        log.info("[DISCORD-TICKET] Criando nova categoria semanal de arquivados: '{}'", newCategoryName);
 
         try {
-            Category newCategory = guild.createCategory(java.util.Objects.requireNonNull(newCategoryName)).complete();
-            log.info("[DISCORD-TICKET] Categoria semanal de arquivados criada com sucesso: '{}' (ID: {})",
-                    newCategory.getName(), newCategory.getId());
+            Category newCategory = guild.createCategory(Objects.requireNonNull(newCategoryName)).complete();
+            log.info("[DISCORD-TICKET] Categoria semanal de arquivados criada: '{}' (ID: {})", newCategory.getName(), newCategory.getId());
             return newCategory;
         } catch (Exception ex) {
-            log.error("[DISCORD-TICKET] Falha ao criar categoria semanal '{}': {}", newCategoryName, ex.getMessage(),
-                    ex);
+            log.error("[DISCORD-TICKET] Falha ao criar categoria semanal '{}': {}", newCategoryName, ex.getMessage(), ex);
             return baseCategory != null ? baseCategory : guild.getCategoryById(ARCHIVED_CATEGORY_ID);
         }
     }
@@ -484,12 +300,10 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
         log.info("[DISCORD-TICKET] Reabrindo canal para o chamado #{}.", ticket.getNumber());
 
         JDA jda = jdaProvider.getIfAvailable();
-        if (jda == null)
-            return;
+        if (jda == null) return;
 
         Guild guild = resolveGuild(jda);
-        if (guild == null)
-            return;
+        if (guild == null) return;
 
         Category activeCategory = guild.getCategoryById(ACTIVE_CATEGORY_ID);
         if (activeCategory == null) {
@@ -498,40 +312,30 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
         }
 
         List<TextChannel> channels = findChannelsForTicket(guild, ticket);
-
         for (TextChannel channel : channels) {
-            // Move de volta para a categoria de ativos
             try {
                 channel.getManager().setParent(activeCategory).queue(
-                        v -> log.info("[DISCORD-TICKET] Canal #{} movido de volta para a categoria de ativos.",
-                                channel.getName()),
-                        err -> log.error("[DISCORD-TICKET] Falha ao mover canal #{} para ativos: {}", channel.getName(),
-                                err.getMessage()));
+                        v -> log.info("[DISCORD-TICKET] Canal #{} movido de volta para a categoria de ativos.", channel.getName()),
+                        err -> log.error("[DISCORD-TICKET] Falha ao mover canal #{} para ativos: {}", channel.getName(), err.getMessage()));
             } catch (Exception ex) {
-                log.error("[DISCORD-TICKET] Erro ao mover canal #{} para categoria ativa: {}", channel.getName(),
-                        ex.getMessage());
+                log.error("[DISCORD-TICKET] Erro ao mover canal #{} para categoria ativa: {}", channel.getName(), ex.getMessage());
             }
 
-            // Restaura permissão de escrita de membros no canal
             for (PermissionOverride override : channel.getMemberPermissionOverrides()) {
                 long targetId = override.getIdLong();
                 if (targetId != jda.getSelfUser().getIdLong()) {
                     try {
                         channel.getManager().putMemberPermissionOverride(
                                 targetId,
-                                EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND,
-                                        Permission.MESSAGE_HISTORY),
+                                EnumSet.of(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND, Permission.MESSAGE_HISTORY),
                                 null).queue();
                     } catch (Exception ex) {
-                        log.warn("[DISCORD-TICKET] Falha ao restaurar permissão de escrita no canal #{}: {}",
-                                channel.getName(), ex.getMessage());
+                        log.warn("[DISCORD-TICKET] Falha ao restaurar permissão de escrita no canal #{}: {}", channel.getName(), ex.getMessage());
                     }
                 }
             }
 
-            // Envia notificação de reabertura no canal
-            channel.sendMessage("🔄 **Chamado Reaberto!** Este chamado foi reaberto e está novamente em atendimento.")
-                    .queue();
+            channel.sendMessage("🔄 **Chamado Reaberto!** Este chamado foi reaberto e está novamente em atendimento.").queue();
         }
     }
 
@@ -540,8 +344,7 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
     public void notifyMerged(Ticket childTicket, Ticket parentTicket) {
         childTicket = ticketRepository.findById(childTicket.getId()).orElse(childTicket);
         parentTicket = ticketRepository.findById(parentTicket.getId()).orElse(parentTicket);
-        log.info("[DISCORD-TICKET] Processando unificação do chamado filho #{} ao pai #{}.", childTicket.getNumber(),
-                parentTicket.getNumber());
+        log.info("[DISCORD-TICKET] Processando unificação do chamado filho #{} ao pai #{}.", childTicket.getNumber(), parentTicket.getNumber());
 
         JDA jda = jdaProvider.getIfAvailable();
         if (jda == null) {
@@ -560,26 +363,16 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
 
         List<TextChannel> childChannels = findChannelsForTicket(guild, childTicket);
         List<TextChannel> parentChannels = findChannelsForTicket(guild, parentTicket);
-        TextChannel parentChannel = parentChannels.isEmpty() ? null : parentChannels.get(0);
+        TextChannel parentChannel = parentChannels.isEmpty() ? null : parentChannels.getFirst();
 
-        String parentMention = parentChannel != null ? "<#" + parentChannel.getId() + ">"
-                : "Chamado Mestre #" + parentTicket.getNumber();
+        String parentMention = parentChannel != null ? "<#" + parentChannel.getId() + ">" : "Chamado Mestre #" + parentTicket.getNumber();
 
-        // 1. Notifica e arquiva o(s) canal(is) do chamado filho
+        // 1. Notifica e arquiva canais do filho
         for (TextChannel channel : childChannels) {
-            net.dv8tion.jda.api.EmbedBuilder eb = new net.dv8tion.jda.api.EmbedBuilder();
-            eb.setTitle(
-                    "🚨 Chamado #" + childTicket.getNumber() + " Unificado ao Chamado #" + parentTicket.getNumber());
-            eb.setColor(CLINIC_BRAND_COLOR);
-            eb.setDescription("Este chamado foi **unificado** ao atendimento principal em " + parentMention + ".\n\n"
-                    + "📋 **Chamado Mestre:** #" + parentTicket.getNumber() + " - " + parentTicket.getTitle() + "\n"
-                    + "🔒 *Este canal está sendo arquivado. O atendimento continuará no canal principal.*");
-            eb.setFooter("Inovare TI • Unificação de Chamados");
-            eb.setTimestamp(java.time.Instant.now());
+            MessageEmbed childEmbed = embedBuilder.buildChildMergedEmbed(childTicket, parentTicket, parentMention);
 
-            channel.sendMessageEmbeds(eb.build()).queue(
+            channel.sendMessageEmbeds(childEmbed).queue(
                     msg -> {
-                        // Remove permissões de envio de mensagens
                         for (PermissionOverride override : channel.getMemberPermissionOverrides()) {
                             long targetId = override.getIdLong();
                             if (targetId != jda.getSelfUser().getIdLong()) {
@@ -593,44 +386,23 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
                             }
                         }
 
-                        // Move para a categoria de arquivados
                         if (targetArchivedCategory != null) {
                             channel.getManager().setParent(targetArchivedCategory).queue(
-                                    v -> log.info("[DISCORD-TICKET] Canal do filho #{} arquivado com sucesso.",
-                                            channel.getName()),
-                                    err -> log.error(
-                                            "[DISCORD-TICKET] Falha ao mover canal do filho #{} para arquivados: {}",
-                                            channel.getName(), err.getMessage()));
+                                    v -> log.info("[DISCORD-TICKET] Canal do filho #{} arquivado com sucesso.", channel.getName()),
+                                    err -> log.error("[DISCORD-TICKET] Falha ao mover canal do filho #{} para arquivados: {}", channel.getName(), err.getMessage()));
                         }
                     },
-                    err -> log.error(
-                            "[DISCORD-TICKET] Falha ao enviar mensagem de unificação no canal do filho #{}: {}",
-                            channel.getName(), err.getMessage()));
+                    err -> log.error("[DISCORD-TICKET] Falha ao enviar mensagem de unificação no canal do filho #{}: {}", channel.getName(), err.getMessage()));
         }
 
-        // 2. Notifica no canal do chamado mestre (pai) e sincroniza permissões
+        // 2. Notifica no canal mestre (pai)
         if (parentChannel != null) {
-            net.dv8tion.jda.api.EmbedBuilder parentEb = new net.dv8tion.jda.api.EmbedBuilder();
-            parentEb.setTitle("🔗 Novo Chamado Unificado a Este Atendimento");
-            parentEb.setColor(CLINIC_BRAND_COLOR);
-            String childRequester = childTicket.getRequester() != null ? childTicket.getRequester().getName()
-                    : "Solicitante";
-            parentEb.setDescription(
-                    "O chamado **#" + childTicket.getNumber() + "** (*" + childTicket.getTitle() + "*), "
-                            + "solicitado por **" + childRequester + "**, foi unificado a este chamado mestre.\n\n"
-                            + "👥 *Os envolvidos agora têm acesso a este canal e receberão as atualizações por aqui.*");
-            parentEb.setFooter("Inovare TI • Central de Atendimento");
-            parentEb.setTimestamp(java.time.Instant.now());
-
-            parentChannel.sendMessageEmbeds(parentEb.build()).queue(
-                    v -> log.info("[DISCORD-TICKET] Notificação de unificação enviada no canal mestre #{}",
-                            parentChannel.getName()),
-                    err -> log.error("[DISCORD-TICKET] Erro ao enviar aviso no canal mestre #{}: {}",
-                            parentChannel.getName(), err.getMessage()));
+            MessageEmbed parentEmbed = embedBuilder.buildParentMergedEmbed(childTicket);
+            parentChannel.sendMessageEmbeds(parentEmbed).queue(
+                    v -> log.info("[DISCORD-TICKET] Notificação de unificação enviada no canal mestre #{}", parentChannel.getName()),
+                    err -> log.error("[DISCORD-TICKET] Erro ao enviar aviso no canal mestre #{}: {}", parentChannel.getName(), err.getMessage()));
         }
 
-        // Sincroniza permissões do canal mestre para dar acesso aos novos usuários
-        // vinculados
         syncTicketChannelPermissions(parentTicket);
     }
 
@@ -642,29 +414,23 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
 
         JDA jda = jdaProvider.getIfAvailable();
         if (jda == null) {
-            log.warn(
-                    "[DISCORD-TICKET] JDA indisponível. Sincronização de permissões do canal para chamado #{} ignorada.",
-                    ticket.getNumber());
+            log.warn("[DISCORD-TICKET] JDA indisponível. Sincronização de permissões do canal para chamado #{} ignorada.", ticket.getNumber());
             return;
         }
 
         Guild guild = resolveGuild(jda);
         if (guild == null) {
-            log.warn(
-                    "[DISCORD-TICKET] Guilda não encontrada. Sincronização de permissões do canal para chamado #{} abortada.",
-                    ticket.getNumber());
+            log.warn("[DISCORD-TICKET] Guilda não encontrada. Sincronização de permissões do canal para chamado #{} abortada.", ticket.getNumber());
             return;
         }
 
         List<TextChannel> channels = findChannelsForTicket(guild, ticket);
-
         if (channels.isEmpty()) {
-            log.warn("[DISCORD-TICKET] Nenhum canal encontrado para sincronizar permissões do chamado #{}.",
-                    ticket.getNumber());
+            log.warn("[DISCORD-TICKET] Nenhum canal encontrado para sincronizar permissões do chamado #{}.", ticket.getNumber());
             return;
         }
 
-        List<br.dev.ctrls.inovareti.modules.user.domain.model.User> candidates = new java.util.ArrayList<>();
+        List<User> candidates = new ArrayList<>();
         if (ticket.getRequester() != null) {
             candidates.add(ticket.getRequester());
         }
@@ -675,18 +441,16 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
             candidates.addAll(ticket.getAdditionalUsers());
         }
 
-        List<Member> membersToPermit = new java.util.ArrayList<>();
-        for (br.dev.ctrls.inovareti.modules.user.domain.model.User u : candidates) {
+        List<Member> membersToPermit = new ArrayList<>();
+        for (User u : candidates) {
             if (u != null && u.getDiscordUserId() != null && !u.getDiscordUserId().isBlank()) {
                 try {
-                    Member m = guild.retrieveMemberById(java.util.Objects.requireNonNull(u.getDiscordUserId().trim()))
-                            .complete();
+                    Member m = guild.retrieveMemberById(Objects.requireNonNull(u.getDiscordUserId().trim())).complete();
                     if (m != null) {
                         membersToPermit.add(m);
                     }
                 } catch (Exception ex) {
-                    log.warn(
-                            "[DISCORD-TICKET] Não foi possível carregar membro {} ({}) no Discord para sincronização de permissões.",
+                    log.warn("[DISCORD-TICKET] Não foi possível carregar membro {} ({}) no Discord para sincronização de permissões.",
                             u.getName(), u.getDiscordUserId(), ex);
                 }
             }
@@ -694,13 +458,11 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
 
         for (TextChannel channel : channels) {
             for (Member m : membersToPermit) {
-                channel.upsertPermissionOverride(java.util.Objects.requireNonNull(m))
+                channel.upsertPermissionOverride(Objects.requireNonNull(m))
                         .grant(Permission.VIEW_CHANNEL, Permission.MESSAGE_SEND, Permission.MESSAGE_HISTORY)
                         .queue(
-                                v -> log.info("[DISCORD-TICKET] Permissões concedidas para {} no canal #{}",
-                                        m.getUser().getAsTag(), channel.getName()),
-                                err -> log.error("[DISCORD-TICKET] Falha ao upsert permissões para {} no canal #{}",
-                                        m.getUser().getAsTag(), channel.getName(), err));
+                                v -> log.info("[DISCORD-TICKET] Permissões concedidas para {} no canal #{}", m.getUser().getAsTag(), channel.getName()),
+                                err -> log.error("[DISCORD-TICKET] Falha ao upsert permissões para {} no canal #{}", m.getUser().getAsTag(), channel.getName(), err));
             }
         }
     }
@@ -709,7 +471,7 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
         Guild guild = null;
         if (discordGuildId != null && !discordGuildId.isBlank()) {
             try {
-                guild = jda.getGuildById(java.util.Objects.requireNonNull(discordGuildId.trim()));
+                guild = jda.getGuildById(Objects.requireNonNull(discordGuildId.trim()));
             } catch (Exception ignored) {
             }
         }
@@ -719,81 +481,17 @@ public class DiscordTicketAdapter implements DiscordTicketPort {
         return guild;
     }
 
-    private String safeGetCategoryName(Ticket ticket) {
-        if (ticket == null)
-            return "Geral";
-        try {
-            if (ticket.getCategory() != null && ticket.getCategory().getName() != null
-                    && !ticket.getCategory().getName().isBlank()) {
-                return ticket.getCategory().getName();
-            }
-        } catch (Exception ex) {
-            log.warn("[DISCORD-TICKET] Não foi possível carregar categoria do chamado #{}: {}",
-                    ticket.getNumber() != null ? ticket.getNumber() : "-", ex.getMessage());
-        }
-        return "Geral";
-    }
-
-    private String safeGetRequesterName(Ticket ticket) {
-        if (ticket == null)
-            return "-";
-        try {
-            if (ticket.getRequester() != null && ticket.getRequester().getName() != null) {
-                String sanitized = DiscordLgpdSanitizer.sanitize(ticket.getRequester().getName());
-                return sanitized != null ? sanitized : "-";
-            }
-        } catch (Exception ex) {
-            log.warn("[DISCORD-TICKET] Não foi possível carregar solicitante do chamado #{}: {}",
-                    ticket.getNumber() != null ? ticket.getNumber() : "-", ex.getMessage());
-        }
-        return "-";
-    }
-
-    private String safeGetSectorName(Ticket ticket) {
-        if (ticket == null)
-            return "Geral";
-        try {
-            if (ticket.getRequester() != null && ticket.getRequester().getSector() != null
-                    && ticket.getRequester().getSector().getName() != null) {
-                return ticket.getRequester().getSector().getName();
-            }
-        } catch (Exception ex) {
-            log.warn("[DISCORD-TICKET] Não foi possível carregar setor do chamado #{}: {}",
-                    ticket.getNumber() != null ? ticket.getNumber() : "-", ex.getMessage());
-        }
-        return "Geral";
-    }
-
-    private String safeGetRelatedTicketsSummary(Ticket ticket) {
-        if (ticket == null)
-            return "";
-        try {
-            if (ticket.getRelatedTickets() != null && !ticket.getRelatedTickets().isEmpty()) {
-                return ticket.getRelatedTickets().stream()
-                        .map(t -> "#" + (t.getNumber() != null ? t.getNumber() : "-") + " - "
-                                + DiscordLgpdSanitizer.sanitize(t.getTitle()))
-                        .collect(java.util.stream.Collectors.joining("\n"));
-            }
-        } catch (Exception ex) {
-            log.warn("[DISCORD-TICKET] Não foi possível carregar chamados relacionados para chamado #{}: {}",
-                    ticket.getNumber() != null ? ticket.getNumber() : "-", ex.getMessage());
-        }
-        return "";
-    }
-
     /**
      * Localiza canais de texto associados a um chamado no Discord.
-     * Suporta tanto o novo formato (título-shortNum) quanto legados
-     * (ticket-shortNum) ou pelo ID no tópico.
      */
     private List<TextChannel> findChannelsForTicket(Guild guild, Ticket ticket) {
         if (guild == null || ticket == null) {
-            return java.util.Collections.emptyList();
+            return Collections.emptyList();
         }
         String shortNum = ticket.getNumber() != null ? ticket.getNumber().toLowerCase() : "";
         String idStr = ticket.getId() != null ? ticket.getId().toString().toLowerCase() : "";
 
-        List<TextChannel> found = new java.util.ArrayList<>();
+        List<TextChannel> found = new ArrayList<>();
         for (TextChannel tc : guild.getTextChannels()) {
             String name = tc.getName() != null ? tc.getName().toLowerCase() : "";
             String topic = tc.getTopic();
